<resources>
    <string name="app_name">Assign 4 2018 Graeme Maher</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>


        <string name="ui_love_picture">Love picture</string>
    <string name="ui_eye_picture">Eye picture</string>
    <string name="ui_dcu_picture">Campus picture</string>
    <string name="ui_fossil_picture">Fossil picture</string>



        <!-- Tab Strings -->
        <string name="ui_tabname_product"></string>
        <string name="ui_tabname_home">home</string>
        <string name="ui_tabname_order">order</string>
        <string name="ui_tabname_collectins">collection</string>

        <!-- Menu Strings -->
        <string name="ui_menu_search">search</string>
        <string name="ui_menu_send">send</string>
        <string name="ui_menu_add">add</string>
        <string name="ui_menu_quit">quit</string>product
        <string name="ui_menu_feedback">feedback</string>
        <string name="ui_menu_about">about</string>
        <string name="ui_menu_share">share</string>
    <string name="PressMe">Press me</string>


<string name="customer_name">Name</string>
<string name="ready_time">Delivery/Collection in (days)</string>
<string name="order_message_1">Please find my order attached</string>
<string name="order_message_collect">I will collect it in </string>
<string name="order_message_instructions">Delivery -or- Collect: </string>
<string name="order_message_end">Regards</string>
<string name="customer_name_blank">You did not enter your name.</string>
<string name="notification_title">Notification!</string>
<string name="image_confirm">Image saved successfully </string>
<string name="to_email">my-tshirt@sda.ie</string>
<string name="email_subject">Order Request </string>
<string name="send_order">Send Order </string>
<string name="order_Tshirt">Order T-shirt </string>
<string name="product_list">Product List </string>
<string name="take_photo_for_Tshirt">Take photo for T-Shirt </string>
<string name="enter_your_name">Enter Your Name</string>

    <string-array name="ui_time_entries">
    <item>" 2"</item>
    <item>" 3"</item>
    <item>" 4"</item>
    <item>" 5"</item>
    <item>10</item>
    <item>14</item>
    </string-array>



</resources>
